// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders DotsPagination 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  height: 8px;
  width: 8px;
  background-color: #000000;
  border: 1px solid #000000;
  border-radius: 50%;
  display: inline-block;
  margin: 8px;
}

.c1:hover {
  background-color: #000000;
  cursor: pointer;
}

.c2 {
  height: 8px;
  width: 8px;
  background-color: #FFFFFF;
  border: 1px solid #000000;
  border-radius: 50%;
  display: inline-block;
  margin: 8px;
}

.c2:hover {
  background-color: #000000;
  cursor: pointer;
}

<div
  className="c0"
>
  <span
    className="c1"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
  <span
    className="c2"
    onClick={[Function]}
  />
</div>
`;

exports[`Pagination renders PagesPagination 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 svg {
  width: 16px;
  height: 16px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  fill: currentColor;
}

.c3 svg g,
.c3 svg p {
  fill: currentColor;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 svg {
  width: 16px;
  height: 16px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: currentColor;
}

.c13 svg g,
.c13 svg p {
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  box-sizing: border-box;
  outline: none;
  cursor: not-allowed;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  width: 40px;
  height: 40px;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #E5E5E5;
  opacity: 0.4;
  color: #E5E5E5;
}

.c1 .c2 {
  padding: 0 8px;
}

.c1 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  width: 40px;
  height: 40px;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  color: #FFFFFF;
}

.c12 .c2 {
  padding: 0 8px;
}

.c12 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c12:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c12 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c6 {
  color: #000000;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  color: #000000;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c10 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  padding: 0 12px 0 12px;
  text-align: center;
  border-bottom: 4px solid black;
  cursor: pointer;
}

.c9 {
  padding: 0 12px 0 12px;
  text-align: center;
  border-bottom: 4px solid transparent;
  cursor: pointer;
}

.c11 {
  padding: 0 12px 0 12px;
  text-align: center;
  border-bottom: 4px solid transparent;
  cursor: initial;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px 0 8px;
}

@media (min-width:752px) {
  .c1 {
    width: 48px;
    height: 48px;
  }
}

@media (min-width:752px) {
  .c12 {
    width: 48px;
    height: 48px;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={true}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <div
      className="c2 c3"
      height={16}
      rotate={180}
      width={16}
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
        />
      </svg>
    </div>
  </button>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <span
        className="c6 c7"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        1
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c8 c9"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        2
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c8 c9"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        3
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c8 c9"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        4
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c8 c9"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        5
      </span>
      <span
        className="c10 c11"
        color="grey3"
        fontSize="xs"
      >
        ...
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c8 c9"
        color="black"
        fontSize="xs"
        onClick={[Function]}
      >
        10
      </span>
    </div>
  </div>
  <button
    className="c12"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <div
      className="c2 c13"
      height={16}
      width={16}
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Pagination renders ProgressPagination 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  width: 100%;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  color: #FFFFFF;
}

.c4 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c4:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c4 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: relative;
  height: 4px;
  border: none;
  background: #E5E5E5;
  background-size: auto;
  width: 100%;
  overflow: hidden;
  color: #00C8DC;
}

.c3::-webkit-progress-value {
  background: #00C8DC;
}

.c3::-webkit-progress-bar {
  background: #E5E5E5;
}

.c3::-moz-progress-bar {
  background: #00C8DC;
}

.c3::-ms-fill {
  background: #00C8DC;
}

.c1 {
  color: #999999;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 {
  display: block;
  text-align: center;
}

.c5 {
  margin-top: 24px;
}

.c0 {
  display: block;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="grey4"
    fontSize="xxs"
  >
    progressLabel
  </span>
  <progress
    className="c3"
    max={100}
    value={0}
  />
  <button
    className="c4 c5"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    buttonLabel
  </button>
</div>
`;
